--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
-  position: relative;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('cover.png');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .App-logo {
@@ -41,6 +48,7 @@
 
 .game_stage_buttons {
   position: absolute;
+  top: 10px;
   display: flex;
   flex-direction: column;
   left: 100px;
