--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url('cover.png');
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),  url('cover.png');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-blend-mode:darken
 }
 
 .App-logo {
