--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -1,10 +1,9 @@
-.buttons-container {
-  /* margin: 0 auto; */
-  /* margin-left: 10; */
+.buttons-block {
+  display: flex;
+  justify-content: space-around;
 }
 @media only screen and (max-width: 960px) {
   .buttons-container {
-
     display: flex;
     flex-direction: column;
   }
